some missed changes and bug fixes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "zeldadungeon-layouts",
+    "name": "zelda",
     "version": "1.0.0",
     "description": "Stream layouts for ZeldaDungeon",
     "private": true,
