nameplate anchor positions, refine layouts

--- a/package.json
+++ b/package.json
@@ -155,6 +155,11 @@
                 "height": 1080
             },
             {
+                "file": "6x5x3v2.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
                 "file": "FSA.html",
                 "width": 1920,
                 "height": 1080
