--- a/package.json
+++ b/package.json
@@ -102,6 +102,11 @@
                 "height": 400
             },
             {
+                "file": "bingocard.html",
+                "width": 192,
+                "height": 432
+            },
+            {
                 "file": "2x8x7.html",
                 "width": 1920,
                 "height": 1080
@@ -168,6 +173,11 @@
             },
             {
                 "file": "FSA.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
+                "file": "BotW.html",
                 "width": 1920,
                 "height": 1080
             }
