--- a/package.json
+++ b/package.json
@@ -102,6 +102,11 @@
                 "height": 400
             },
             {
+                "file": "social2.html",
+                "width": 400,
+                "height": 400
+            },
+            {
                 "file": "bingocard.html",
                 "width": 192,
                 "height": 432
