--- a/package.json
+++ b/package.json
@@ -82,6 +82,11 @@
         ],
         "graphics": [
             {
+                "file": "background.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
                 "file": "omnibar.html",
                 "width": 1920,
                 "height": 150
