3x8x7 overlay for lttp

--- a/package.json
+++ b/package.json
@@ -122,6 +122,11 @@
                 "height": 1080
             },
             {
+                "file": "3x8x7.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
                 "file": "2x10x9.html",
                 "width": 1920,
                 "height": 1080
