10x3x2 layout for mc; elimination component

--- a/package.json
+++ b/package.json
@@ -199,6 +199,11 @@
                 "height": 1080
             },
             {
+                "file": "10x3x2.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
                 "file": "FSA.html",
                 "width": 1920,
                 "height": 1080
