--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
         "twitter-stream-api": "^0.5.0"
     },
     "nodecg": {
-        "compatibleRange": "~0.9.0",
+        "compatibleRange": "~1.3.2",
         "dashboardPanels": [
+            {
+                "name": "runs",
+                "title": "Runs",
+                "file": "runs/runs.html",
+                "headerColor": "#9f9bbd",
+                "fullbleed": true
+            },
             {
                 "name": "timer",
                 "title": "Timer",
