rumble improvements and burndown chart

--- a/package.json
+++ b/package.json
@@ -143,6 +143,11 @@
                 "height": 400
             },
             {
+                "file": "burndown.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
                 "file": "2x8x7.html",
                 "width": 1920,
                 "height": 1080
