--- a/package.json
+++ b/package.json
@@ -108,6 +108,11 @@
                 "height": 1080
             },
             {
+                "file": "3x10x9.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
                 "file": "2x10x9.html",
                 "width": 1920,
                 "height": 1080
@@ -119,6 +124,11 @@
             },
             {
                 "file": "3x5x3.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
+                "file": "4x10x9.html",
                 "width": 1920,
                 "height": 1080
             },
