last minute adjustments

--- a/package.json
+++ b/package.json
@@ -168,6 +168,11 @@
                 "height": 1080
             },
             {
+                "file": "1x16x9x4p.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
                 "file": "2x16x9.html",
                 "width": 1920,
                 "height": 1080
