--- a/package.json
+++ b/package.json
@@ -58,6 +58,11 @@
                 "height": 1080
             },
             {
+                "file": "countdown.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
                 "file": "omnibar.html",
                 "width": 1920,
                 "height": 150
