--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "private": true,
     "dependencies": {
         "request-promise": "^4.2.1",
+        "tiltify-api-client": "^1.0.12",
         "twemoji": "^2.0.5",
         "twitchps": "^0.5.5",
         "twitter-stream-api": "^0.5.0"
@@ -236,11 +237,14 @@
         "soundCues": [
             {
                 "name": "Donation"
-            }, {
+            },
+            {
                 "name": "Donation16"
-            }, {
+            },
+            {
                 "name": "Donation50+"
-            }, {
+            },
+            {
                 "name": "Donation100+"
             }
         ]
