--- a/package.json
+++ b/package.json
@@ -174,6 +174,11 @@
                 "height": 1080
             },
             {
+                "file": "1x16x9-teams.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
                 "file": "1x16x9x4p.html",
                 "width": 1920,
                 "height": 1080
