--- a/package.json
+++ b/package.json
@@ -139,7 +139,17 @@
                 "height": 1080
             },
             {
+                "file": "1x3x2.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
                 "file": "4x3x2.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
+                "file": "4x4x3.html",
                 "width": 1920,
                 "height": 1080
             },
@@ -165,6 +175,16 @@
             },
             {
                 "file": "1x8x5.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
+                "file": "1x8x7.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
+                "file": "1x10x9.html",
                 "width": 1920,
                 "height": 1080
             },
@@ -195,6 +215,11 @@
             },
             {
                 "file": "4x16x9.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
+                "file": "4x5x3.html",
                 "width": 1920,
                 "height": 1080
             },
