--- a/package.json
+++ b/package.json
@@ -99,6 +99,11 @@
                 "height": 400
             },
             {
+                "file": "maiamais.html",
+                "width": 160,
+                "height": 60
+            },
+            {
                 "file": "burndown.html",
                 "width": 1920,
                 "height": 1080
