--- a/package.json
+++ b/package.json
@@ -64,6 +64,11 @@
                 "height": 1080
             },
             {
+                "file": "upnext.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
                 "file": "omnibar.html",
                 "width": 1920,
                 "height": 150
