add layout for ST multi

--- a/package.json
+++ b/package.json
@@ -169,6 +169,11 @@
                 "height": 1080
             },
             {
+                "file": "4x4x3+1x4x3.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
                 "file": "1x2x4x3.html",
                 "width": 1920,
                 "height": 1080
