missed qr changes

--- a/package.json
+++ b/package.json
@@ -327,6 +327,11 @@
                 "file": "LoZ.html",
                 "width": 1920,
                 "height": 1080
+            },
+            {
+                "file": "qr.html",
+                "width": 1920,
+                "height": 1080
             }
         ],
         "soundCues": [
