tiltify api v5 and donation matches

--- a/package.json
+++ b/package.json
@@ -371,6 +371,9 @@
             },
             {
                 "name": "Donation100+"
+            },
+            {
+                "name": "Beedle"
             }
         ]
     }
