--- a/package.json
+++ b/package.json
@@ -154,6 +154,11 @@
                 "height": 1080
             },
             {
+                "file": "4x8x7.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
                 "file": "1x3x2.html",
                 "width": 1920,
                 "height": 1080
@@ -170,6 +175,11 @@
             },
             {
                 "file": "4x4x3+1x4x3.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
+                "file": "1x4x3+1x5x3.html",
                 "width": 1920,
                 "height": 1080
             },
@@ -204,6 +214,11 @@
                 "height": 1080
             },
             {
+                "file": "4x2x4x3.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
                 "file": "1x8x5.html",
                 "width": 1920,
                 "height": 1080
@@ -229,7 +244,17 @@
                 "height": 1080
             },
             {
+                "file": "1x16x9x2p_bottom.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
                 "file": "1x16x9x4p.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
+                "file": "1x16x9x4p_bottom.html",
                 "width": 1920,
                 "height": 1080
             },
@@ -264,6 +289,16 @@
                 "height": 1080
             },
             {
+                "file": "4x5x3+6x4x3.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
+                "file": "5x5x3.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
                 "file": "6x5x3.html",
                 "width": 1920,
                 "height": 1080
@@ -290,6 +325,11 @@
             },
             {
                 "file": "8x16x9.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
+                "file": "9x16x9.html",
                 "width": 1920,
                 "height": 1080
             },
@@ -324,6 +364,11 @@
                 "height": 1080
             },
             {
+                "file": "e9x3x2.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
                 "file": "e10x3x2.html",
                 "width": 1920,
                 "height": 1080
@@ -335,6 +380,16 @@
             },
             {
                 "file": "e14x3x2.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
+                "file": "e15x3x2.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
+                "file": "interview-1x2x4x3.html",
                 "width": 1920,
                 "height": 1080
             },
