--- a/package.json
+++ b/package.json
@@ -74,6 +74,11 @@
                 "height": 150
             },
             {
+                "file": "omnibar-slim.html",
+                "width": 1920,
+                "height": 126
+            },
+            {
                 "file": "timer.html",
                 "width": 200,
                 "height": 60
@@ -169,6 +174,11 @@
                 "height": 1080
             },
             {
+                "file": "3x4x3.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
                 "file": "4x4x3.html",
                 "width": 1920,
                 "height": 1080
@@ -195,6 +205,11 @@
             },
             {
                 "file": "1x2x4x3.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
+                "file": "1x2x4x3_large.html",
                 "width": 1920,
                 "height": 1080
             },
@@ -279,6 +294,11 @@
                 "height": 1080
             },
             {
+                "file": "4x16x9_counters.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
                 "file": "4x5x3.html",
                 "width": 1920,
                 "height": 1080
@@ -290,6 +310,11 @@
             },
             {
                 "file": "4x5x3+6x4x3.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
+                "file": "5x5x3+5x4x3.html",
                 "width": 1920,
                 "height": 1080
             },
@@ -335,6 +360,11 @@
             },
             {
                 "file": "10x16x9.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
+                "file": "bingo_4x5x3.html",
                 "width": 1920,
                 "height": 1080
             },
@@ -385,6 +415,11 @@
             },
             {
                 "file": "e15x3x2.html",
+                "width": 1920,
+                "height": 1080
+            },
+            {
+                "file": "e17x3x2.html",
                 "width": 1920,
                 "height": 1080
             },
